--- a/simpleorigami/styles/loading-widget.css
+++ b/simpleorigami/styles/loading-widget.css
@@ -18,6 +18,7 @@
 	justify-content: center;
 	align-items: center;
 	z-index: 100;
+	top:100vh;
 }
 
 #spinner{
@@ -39,7 +40,8 @@
 	margin:0 5%;
 	border-radius:50%;
 	background-color: black;
-  animation-name: jump .75s;
+  animation-name: jump;
+	animation-duration: .75s;
 	animation-iteration-count:infinite;
 }
 .dot:nth-of-type(1){
