--- a/stili.css
+++ b/stili.css
@@ -6,8 +6,11 @@
 	--header-text-color:white;
 	--content-text-color:white;
 	--content-link-color:gray;
-	--card-back-color:rgb(39, 15, 15);
+	--card-back-color:rgb(40, 15, 15);
+	--card-title-back-color:rgb(60, 20, 20);
+	--card-title-height:24px;
 	font-family: 'Roboto', sans-serif;
+	word-wrap: break-word;
 }
 
 @media only screen and (min-width: 768px) {
@@ -30,23 +33,32 @@ body{
 	height:30%;
 	z-index:-2;
 }
+#patternwrapper{
+	position:relative;
+	margin:0;
+	padding:0;
+	left:calc(-1 * var(--body-padding));
+	top:var(--body-padding);
+	width:100%;
+	height:0;
+}
 #antipattern{
-	position:fixed;
+	position:absolute;
 	margin:0;
 	padding:0;
 	left:0;
-	bottom:0;
+	top:-500px;
 	width:100%;
 	height:500px;
-	background-image: radial-gradient(circle at 2% 100%,rgba(255, 149, 130,0) 0%,rgba(255, 149, 130,1) 25%,rgba(255, 149, 130,1) 100%);
+	background-image: radial-gradient(circle at 2% 100%,rgba(255, 149, 130,0) 0%,rgba(255, 149, 130,1) 35%,rgba(255, 149, 130,1) 100%);
 	z-index:-5;
 }
 #pattern{
-	position:fixed;
+	position:absolute;
 	margin:0;
 	padding:0;
 	left:0;
-	bottom:0;
+	top:-500px;
 	width:100%;
 	height:500px;
 	background-image: url("./wave.svg");
@@ -90,6 +102,7 @@ body{
 	position:relative;
 	left:-20px;
 	font-size: calc(.15 * var(--faccione-dim));
+	transform:skew(-10deg, 0);
 }
 #titoli > h1{
 	margin:0;
@@ -108,12 +121,11 @@ body{
 	grid-area: presentazione;
 }
 
-
-
 .contenuti{
+	position:relative;
 	color:var(--header-text-color);
 	margin:0 auto;
-	margin-top:30px;
+	margin-top:40px;
 	padding:20px;
 	width:var(--content-width);
 	display:grid;
@@ -124,6 +136,21 @@ body{
 	background-color: var(--card-back-color);
 	border-radius: 10px;
 	box-shadow:5px 5px 5px black;
+}
+.contenuti > h3{
+	position:absolute;
+	z-index:-1;
+	writing-mode: vertical-rl;
+	transform:rotate(180deg);
+	top:calc(0.5 * var(--card-title-height));
+	left:calc(-1.5 * var(--card-title-height));
+	padding:10px 10px;
+	margin:0;
+	line-height: var(--card-title-height);
+	font-size: calc(.75 * var(--card-title-height));
+	background-color: var(--card-back-color);
+	border-radius: 0 10px 10px 0;
+	box-shadow:-5px -5px 5px black;
 }
 .testo{
 	padding:0;
