--- a/Art/Squares/index.css
+++ b/Art/Squares/index.css
@@ -1,37 +1,2 @@
-/*!**********************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/styles.scss ***!
-  \**********************************************************************************************************/
 @import url(https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap);
-/*!**************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/styles.scss (1) ***!
-  \**************************************************************************************************************/
-body {
-  font-family: "Roboto", sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: black;
-  color: white;
-  --neutral-color-light:rgb(247, 247, 247);
-  --neutral-color:gray;
-  --neutral-color-dark:rgb(58, 58, 58);
-}
-body video {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  object-position: 50% 50%;
-  object-fit: cover;
-}
-body #canvas-container {
-  position: fixed;
-}
-body #canvas-container .offscreen-canvas {
-  position: fixed;
-  left: 100vw;
-}
-body #canvas-container #res-canvas {
-  image-rendering: pixelated;
-}
-body #canvas-container #res-canvas.hidden {
-  display: none;
-}
+body{font-family:"Roboto",sans-serif;margin:0;padding:0;background-color:#000;color:#fff;--neutral-color-light:rgb(247, 247, 247);--neutral-color:gray;--neutral-color-dark:rgb(58, 58, 58)}body video{position:fixed;width:100%;height:100%;object-position:50% 50%;object-fit:cover}body #canvas-container{position:fixed}body #canvas-container .offscreen-canvas{position:fixed;left:100vw}body #canvas-container #res-canvas{image-rendering:pixelated}body #canvas-container #res-canvas.hidden{display:none}
