--- a/SillyThing/styles.css
+++ b/SillyThing/styles.css
@@ -29,6 +29,7 @@ body{
 
 
 p.fire{
+	text-align: center;
 	color: #ffffff;
 	text-shadow: #fff 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px;
 }
