--- a/SillyThing/styles.css
+++ b/SillyThing/styles.css
@@ -1,25 +1,3 @@
-@keyframes shake-small{
-  0%{transform:rotateZ(0)}
-  25%{transform:rotateZ(10deg)}
-  50%{transform:rotateZ(0)}
-  75%{transform:rotateZ(-10deg)}
-  100%{transform:rotateZ(0)}
-}
-@keyframes shake-med{
-  0%{transform:rotateZ(0)}
-  25%{transform:rotateZ(20deg)}
-  50%{transform:rotateZ(0)}
-  75%{transform:rotateZ(-20deg)}
-  100%{transform:rotateZ(0)}
-}
-@keyframes shake-big{
-  0%{transform:rotateZ(0)}
-  25%{transform:rotateZ(40deg)}
-  50%{transform:rotateZ(0)}
-  75%{transform:rotateZ(-40deg)}
-  100%{transform:rotateZ(0)}
-}
-
 *{
 	margin:0;
 	padding:0;
@@ -49,6 +27,13 @@ body{
 }
 
 
+.backdrop{
+	position:absolute;
+	width:100%;
+	height:100%;
+	opacity:0;
+	transform:opacity .25;
+}
 .ball{
   transform-origin: top;
   animation-timing-function: linear;
@@ -58,15 +43,7 @@ body{
 	/* background-color: yellow; */
 	border-radius: 50%;
 }
-.ball.shake-small{
-  animation:.75s shake-small 4;
-}
-.ball.shake-med{
-  animation:.75s shake-med 4;
-}
-.ball.shake-big{
-  animation:.75s shake-big 4;
-}
+
 .ball > .shine{
   position:absolute;
 	top:calc(.1 * var(--ball-size));
@@ -107,12 +84,15 @@ body{
 
 
 p.fire{
+	font-size: 3em;
   text-align: center;
 	color: #ffffff;
 	text-shadow: #fff 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px;
 }
 
-p.neon{
-	color: #ffffff;
-	text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #49ff18, 0 0 30px #49ff18, 0 0 40px #49ff18, 0 0 55px #49ff18, 0 0 75px #49ff18;
+p.footer-text{
+	position:absolute;
+	bottom:1em;
+	color:white;
+	font-size:1em;
 }
