--- a/SillyThing/styles.css
+++ b/SillyThing/styles.css
@@ -83,6 +83,14 @@ body{
 }
 
 
+a.header-text{
+	z-index:100;
+	position:absolute;
+	top:1em;
+	color:white;
+	font-size:1em;
+}
+
 p.fire{
 	font-size: 2em;
   text-align: center;
