--- a/newbudget/scripts/components/budgetentry/budgetEntry.css
+++ b/newbudget/scripts/components/budgetentry/budgetEntry.css
@@ -1,7 +1,7 @@
 .container{
   display:grid;
   grid-template-rows:var(--budget-entry-height); 
-  grid-template-columns: max-content 1fr 2fr max-content;
+  grid-template-columns: max-content 1em 1fr 2fr max-content;
   padding: 0 .5em;
   gap: .5em;
   align-items: center;
@@ -24,20 +24,34 @@
   text-align: end;
 }
 
+
+.category{
+  grid-column:2;
+  justify-self: center;
+  background-color: white;
+  text-align: center;
+  box-sizing: border-box;
+  width:1em;
+  height:1em;
+  line-height: 1em;
+  border-radius:50%;
+  border: 1px solid gray;
+}
+
 .value{
   white-space: nowrap;
-  grid-column:2;
+  grid-column:3;
   justify-self: flex-end;
 }
 
 .cause{
-  grid-column:3;
+  grid-column:4;
   line-height:1;
   justify-self: center;
 }
 
 .actions{
-  grid-column:4;
+  grid-column:5;
   justify-self: center;
   display:flex;
   align-items: center;
