--- a/newbudget/styles.css
+++ b/newbudget/styles.css
@@ -1,6 +1,7 @@
 *{
   padding:0;
   margin:0;
+  touch-action: none;
 }
 :not(:defined){
   visibility: hidden;  
@@ -31,7 +32,6 @@ body{
   width:100vw;
   height:var(--toolbar-height);
   z-index:50;
-  view-transition-name: none;
 }
 .content{
   position:relative;
